--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
@@ -31,5 +33,5 @@
   "bugs": {
     "url": "https://github.com/FOSfaine/GoogleBooks3/issues"
   },
-  "homepage": "https://github.com/FOSfaine/GoogleBooks3#readme"
+  "homepage": "https://fosfaine.github.io/GoogleBooks3/"
 }
