tweaking gh-pages deploy

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "googlebooks3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://fosfaine.github.io/GoogleBooks3/",
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
